<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/ic_category"
        android:icon="@drawable/grocery_stroke"
        android:title="@string/Products"
        app:cnb_textColor = "@color/black"
        app:cnb_backgroundColor = "@color/whiteGrey"
        app:cnb_iconColor="@color/black"
        app:cnb_iconTintMode="src_in"
        />

    <item
        android:id="@+id/ic_home"
        android:enabled="true"
        android:icon="@drawable/home_stroke"
        android:title="@string/Home"
        app:cnb_textColor = "@color/black"
        app:cnb_backgroundColor = "@color/whiteGrey"
        app:cnb_iconColor="@color/black"
        app:cnb_iconTintMode="src_in"
        />

   <item
        android:id="@+id/ic_receipt"
        android:icon="@drawable/recipt_stoke"
        android:title="@string/Receipt"
        app:cnb_textColor = "@color/black"
       app:cnb_backgroundColor = "@color/whiteGrey"
        app:cnb_iconColor="@color/black"
        app:cnb_iconTintMode="src_in"

       />

</menu>