<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404E5A"
    tools:context=".all.activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="486dp"
        android:layout_height="883dp"
        android:src="@drawable/bg_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <com.fyp.barcodebasedpaymentsystem.all.utils.BNTextViewRegular
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/createt"
        android:textColor="@color/Orange"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fullname"
        android:background="@drawable/rectangle"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/Dark_Orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailt"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:hint="@string/et_hint_email_id"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:padding="20dp"
        android:textColor="@color/Dark_Orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:background="@drawable/rectangle"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/Dark_Orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailt" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password_box"
        android:background="@drawable/rectangle"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/et_hint_confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/Dark_Orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.fyp.barcodebasedpaymentsystem.all.utils.BNTextViewRegular
        android:id="@+id/texttest"
        android:layout_marginTop="20dp"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/guideLine"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_box" />

    <com.fyp.barcodebasedpaymentsystem.all.utils.BNButton
        android:id="@+id/registerButton"
        android:layout_width="333dp"
        android:layout_height="77dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_corner"
        android:text="@string/createt"
        android:textColor="@color/white"
        android:textSize="@dimen/smalltextSize2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttest" />



    <com.fyp.barcodebasedpaymentsystem.all.utils.BNTextViewRegular
        android:id="@+id/BNEditText4"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/haveAcc"
        android:textColor="@color/Orange"
        android:textSize="@dimen/smalltextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingClass" />












</androidx.constraintlayout.widget.ConstraintLayout>