<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404E5A"
    tools:context=".all.activity.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/profile"
            android:textColor="@color/Orange"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_user_profile_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_user_image"
            android:layout_width="@dimen/profile_user_image_size"
            android:layout_height="@dimen/profile_user_image_size"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/profile_user_photo_margin"
                android:background="@color/grey"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/user_image_background" />
        </FrameLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_fullname"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:hint="@string/name"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/Dark_Orange"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_user_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_email"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:hint="@string/et_hint_email_id"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/Dark_Orange"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/user_fullname"  />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_phonenumber"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:hint="@string/num"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/Dark_Orange"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/user_email"  />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_radio_button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/user_phonenumber" >

        <com.fyp.barcodebasedpaymentsystem.all.utils.BNRadiobutton
            android:id="@+id/rb_male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/profile_radio_button_MarginStartEnd"
            android:layout_weight="1"
            android:background="@drawable/drawable_gender_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/rb_lbl_male"
            android:textSize="@dimen/smalltextSize"
            android:textColor="@drawable/drawable_gender_tab_text_color_selector"
            android:textStyle="bold" />

        <com.fyp.barcodebasedpaymentsystem.all.utils.BNRadiobutton
            android:id="@+id/rb_female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/profile_radio_button_MarginStartEnd"
            android:layout_weight="1"
            android:background="@drawable/drawable_gender_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:textSize="@dimen/smalltextSize"
            android:text="@string/rb_lbl_female"
            android:textColor="@drawable/drawable_gender_tab_text_color_selector"
            android:textStyle="bold" />
    </RadioGroup>

    <com.fyp.barcodebasedpaymentsystem.all.utils.BNButton
        android:id="@+id/btn_save"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:background="@drawable/box_corner"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/smalltextSize2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"  />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>